# Comdr

./: .comdr.toml.example  .gitignore  .npmrc  AUDIT.md  CLAUDE.md  COMDR.md  README.md  comdr.cmd  comdr.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
.github/workflows/: ci.yml
crates/comdr-tools/: Cargo.toml  build.rs
crates/comdr-tools/src/: bootstrap.rs  lib.rs  sdb.rs  snapshot.rs  symbols.rs  utils.rs
crates/comdr-tools/src/sdb/: test_feedback.rs
crates/comdr-tools/src/tools/: file.rs  git.rs  lsp.rs  mod.rs  shell.rs
docs/: agent-1-fork-shadow-workspace.md  agent-2-vscode-extension.md  agent-3-engine-changes.md  agent-4-architecture-plan.md  tool-enhancement-plan.md  tool-enhancement-research.md  vscode-deep-integration-architecture.md  vscode-integration-plan.md  vscode-integration-tradeoff-design.md
scripts/: install-global.mjs  run-tui.cmd  run-tui.mjs  test-tui.ts
tests/: harness.ts  integration.test.ts  package.json  rag.test.ts  real-scenarios.mjs  tsconfig.json
world-models/: cocos.md  comdr-art.md  nextjs.md  node.md  python.md  react.md  rust.md  typescript.md
