[package]
name = "comdr-tools"
version = "0.1.0"
edition = "2021"
description = "Comdr Rust execution layer — SDB Gate + file/shell/git/lsp tools via napi-rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["full", "serde-json"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = "2"
jsonschema = "0.18"
git2 = "0.19"
glob = "0.3"
regex = "1"
walkdir = "2"
similar = "2"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
